fix : - change z-index of settings button while settings modal is open

--- a/app/[locale]/styles/partials/_button.scss
+++ b/app/[locale]/styles/partials/_button.scss
@@ -69,6 +69,7 @@
     background: var(--color--bg-light);
 
     &__right {
+      z-index: 100;
       right: calc(2% + 7px);
     }
 
